--- a/assignments/DOM Basics/02/index.html
+++ b/assignments/DOM Basics/02/index.html
@@ -47,6 +47,40 @@
     <div class="demo-query-all">Access me by query all (2)</div>
     <script>
       // your code goes here
+
+      document.getElementById("demo").style.border = "1px solid purple";
+      document.getElementById("demo").style.color = "purple";
+
+      function changeDemoColor() {
+        var demoColor = document.getElementByClassName("demo");
+        for (i = 0; i < demoColor.length; i++) {
+          demoColor[i].style.color = "pink";
+          demoColor[i].style.border = "1px solid purple";
+        }
+      };
+      changeDemoColor();
+
+      function changeArticleColor() {
+        var articleColor = document.getElementByTagName("article");
+        for (i = 0; i < articleColor.length; i++) {
+          articleColor[i].style.color = "white";
+          articleColor[i].style.border = "1px solid green";
+        }
+      };
+      changeArticleColor();
+
+      document.querySelector("#demo-query").style.border = "1px solid grey";
+
+      function demoQuery() {
+        var demoQueryColor = document.querySelectorAll(".demo-query-all");
+          for(i = 0; i < demoQueryColor.length; i++) {
+            demoQueryColor[i].style.border = "1px solid green";
+          }
+      };
+
+      demoQuery();
+
+      
     </script>
   </body>
 </html>
