--- a/assignments/events/3. randomQuotes/index.html
+++ b/assignments/events/3. randomQuotes/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
+	<h1>Click to get random quotes</h1>
+	<div>
+		<p id="quotedisplay"></p>
+		<p id="quoteauthor"></p>
+	</div>
+	<button id="click">Click Me!</button>
+	
 <script src="main.js"></script>
 </body>
 </html>
