--- a/assignments/DOM Basics/03/index.html
+++ b/assignments/DOM Basics/03/index.html
@@ -39,5 +39,21 @@
     const p = document.getElementsByTagName("p")[0];
     const ul = document.getElementsByTagName("ul")[0];
     // Your code goes here
+
+    document.firstElementChild.children[1].children[3].children[0].style.backgroundColor = "hotpink";
+
+    var change = document.body.children[3].children;
+    for (i = 0; i < change.length; i++) {
+      change[i].style.backgroundColor = "yellow"
+    };
+
+    document.body.children[3].children[2].style.color = "pink";
+
+    document.body.children[3].children[1];
+
+    document.body.children[4].previousElementSibling.children[0].style.backgroundColor = "coral";
+
+    document.body.children[4].previousElementSibling.children[2].style.backgroundColor = "aquamarine";
+
   </script>
 </html>
